<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

<!--    <item-->
<!--        android:id="@+id/action_search"-->
<!--        android:title="@string/action_search"-->
<!--        android:icon="@drawable/ic_search"-->
<!--        app:showAsAction="ifRoom|collapseActionView"-->
<!--        app:actionViewClass="androidx.appcompat.widget.SearchView"-->
<!--        />-->

    <item
        android:id="@+id/switch_theme"
        android:title="@string/switch_theme"
        android:icon="@drawable/ic_switch_theme"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/lang_by"
        android:title="@string/lang_by"
        app:showAsAction="never"
        />

    <item android:id="@+id/lang_eng"
        android:title="@string/lang_eng"
        app:showAsAction="never"
        />

    <item android:id="@+id/lang_ru"
        android:title="@string/lang_ru"
        app:showAsAction="never"
        />

</menu>